fix arrows gap clamp logic

--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -63,36 +63,6 @@
   }
 }
 
-.about__sig {
-  color: var(--pico-primary);
-  font-family: "Parisienne", "Brush Script MT", "Lucida Handwriting", serif;
-  font-size: u.rem(32);
-  text-align: right;
-  display: block;
-  text-align: center;
-}
-
-.about__info {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  margin: 0 auto;
-  gap: u.rem(40);
-  width: 100%;
-
-  @include u.breakpoint-down(small) {
-    flex-direction: column;
-  }
-}
-
-.about__info-column ul {
-  padding-left: 0;
-  font-size: 0.9rem;
-
-  @include u.breakpoint-down(small) {
-    text-align: center;
-  }
-}
-
 .about-video {
   margin-block-start: 25px;
   width: 20rem;
@@ -147,4 +117,117 @@ figure {
 
 .project__info-R ul {
   line-height: 2;
+}
+
+.slideshow-copy {
+  text-align: center;
+  max-width: 980px;
+}
+
+.slideshow-video {
+  width: 100%;
+  height: auto;
+  display: block;
+  object-fit: cover;
+}
+
+.slideshow-video,
+.slideshow-copy {
+  opacity: 1;
+}
+
+.fade-out {
+  opacity: 0;
+}
+
+.slideshow-video,
+.slideshow-copy {
+  transition: opacity 0.5s ease-in-out;
+}
+
+.slideshow-video.move-out {
+  animation: moveRightOut 0.5s forwards;
+}
+
+.slideshow-video.move-in {
+  animation: moveLeftIn 0.5s forwards;
+}
+
+.slideshow-copy.fade-out {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.slideshow-copy.fade-in {
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
+}
+
+/* Keyframe for moving video off-screen to the right */
+@keyframes moveRightOut {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(100vw); /* Moves off screen to the right */
+  }
+}
+
+/* Keyframe for bringing video back from the left */
+@keyframes moveLeftIn {
+  0% {
+    transform: translateX(-100vw); /* Starts off-screen from the left */
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.slideshow-controls {
+  position: absolute;
+  width: 100%;
+  bottom: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding-inline: 20px;
+  gap: clamp(75vw, 1380px, 92vw);
+  margin-top: 20px;
+
+  & svg {
+    transform: scale(1.5);
+  }
+
+  @media only screen and (orientation: portrait) {
+    bottom: 10%;
+    padding-inline: 10vw;
+    justify-content: space-between;
+    gap: 10px;
+  }
+
+  @include u.breakpoint-down(medium) {
+    bottom: 10%;
+    padding-inline: 10vw;
+    justify-content: space-between;
+    gap: 10px;
+  }
+
+  & svg {
+    cursor: pointer;
+    fill: var(--pico-primary);
+  }
+
+  & :hover {
+    fill: var(--pico-primary-hover);
+  }
+
+  /* Portrait adjustments */
+  @media only screen and (orientation: portrait) {
+    .slideshow-controls {
+      margin-top: 10px; /* Reduce the space above controls for portrait mode */
+    }
+  }
 }
